tests/baselines/reference/spuriousCircularityOnTypeImport.errors.txt
tests/cases/compiler/index.ts(6,38): error TS2313: Type parameter 'FuncMap' has a circular constraint.
tests/cases/compiler/index.ts(6,68): error TS2344: Type 'FuncMap' does not satisfy the constraint 'Record<string, (...params: unknown[]) => unknown>'.
tests/cases/compiler/index.ts(6,143): error TS2344: Type 'FuncMap[P]' does not satisfy the constraint '(...args: any) => any'.
  Type 'FuncMap[keyof FuncMap]' is not assignable to type '(...args: any) => any'.
    Type 'FuncMap[string] | FuncMap[number] | FuncMap[symbol]' is not assignable to type '(...args: any) => any'.
      Type 'FuncMap[string]' is not assignable to type '(...args: any) => any'.


==== tests/cases/compiler/types.ts (0 errors) ====
    export type SelectorMap<T extends Record<string, (...params: unknown[]) => unknown>> = {
        [key in keyof T]: T[key];
    };
    
==== tests/cases/compiler/index.ts (3 errors) ====
    export type SelectorMap<T extends Record<string, (...params: unknown[]) => unknown>> = {
        [key in keyof T]: T[key];
    };
    
    export declare const value2: {
        sliceSelectors: <FuncMap extends import('./types').SelectorMap<FuncMap>>(selectorsBySlice: FuncMap) => { [P in keyof FuncMap]: Parameters<FuncMap[P]> };
                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2313: Type parameter 'FuncMap' has a circular constraint.
                                                                       ~~~~~~~
!!! error TS2344: Type 'FuncMap' does not satisfy the constraint 'Record<string, (...params: unknown[]) => unknown>'.
!!! related TS2208 tests/cases/compiler/index.ts:6:22: This type parameter might need an `extends Record<string, (...params: unknown[]) => unknown>` constraint.
                                                                                                                                                  ~~~~~~~~~~
!!! error TS2344: Type 'FuncMap[P]' does not satisfy the constraint '(...args: any) => any'.
!!! error TS2344:   Type 'FuncMap[keyof FuncMap]' is not assignable to type '(...args: any) => any'.
!!! error TS2344:     Type 'FuncMap[string] | FuncMap[number] | FuncMap[symbol]' is not assignable to type '(...args: any) => any'.
!!! error TS2344:       Type 'FuncMap[string]' is not assignable to type '(...args: any) => any'.
    };
    
    export declare const value3: {
        sliceSelectors: <FuncMap extends SelectorMap<FuncMap>>(selectorsBySlice: FuncMap) => { [P in keyof FuncMap]: Parameters<FuncMap[P]> };
    };
    
    